<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Countdown timer presets</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu_about">About</string>
    <string name="but_add_timer_preset">Add preset timer</string>
    <string name="action_edit_preset">Edit</string>
    <string name="action_delete_preset">Delete</string>
    <string name="lbl_preset_title">Title</string>
    <string name="lbl_preset_time">Time</string>
    <string name="but_timer_preset_add">Add</string>
    <string name="but_timer_preset_edit">Edit</string>
    <string name="txt_timer_preset_hint">Optional</string>
    <string name="title_activity_countdown">CountdownActivity</string>
    <string name="but_stop_timer">Stop alarm</string>
    <string name="but_cancel_timer">Cancel</string>
    <string name="but_restart_timer">Restart timer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="but_close_dialog">Close</string>
    <string name="lbl_time_min">min</string>
    <string name="lbl_time_sec">sec</string>

</resources>
